--- a/src/font_reader_gtk/theme.css
+++ b/src/font_reader_gtk/theme.css
@@ -2,19 +2,30 @@
 
 /* Button styling */
 
+@define-color text #00ff15;
+@define-color background #1e0046;
+@define-color border #8000b3;
+@define-color select_outline #6f00ff;
+
+headerbar {
+    border:none;
+    margin: 0;
+    box-shadow: inset 0 1 0 1px @background;
+    
+  }
 
 
-* {
+  * {
     /* Modify the properties for all GTK elements */
     border: none;
     margin: 0;
-    
+    border-radius: 0 0 0 0;
     
     font-family: Arial;
     font-size: 14px;
-    color: #00ff15;
-    background-color: #1e0046;
-    background: #1e0046;
+    color: @text;
+    background-color: @background;
+    background: @background;
     
     outline-width: 0px;
 }
@@ -27,12 +38,12 @@ button {
     font-family: Arial;
     outline:0;
     font-size: 14px;
-    color: #00ff15;
-    background-color: #1e0046;
-    background: #1e0046;
+    color: @text;
+    background-color: @background;
+    background: @background;
     outline-width: 0px;
     border-radius: 0;
-    box-shadow: inset 0 0 0 1px #8000b3;
+    box-shadow: inset 0 0 0 1px @border;
 }
 
 
@@ -40,8 +51,8 @@ button {
 button:hover {
     /* Change the border color on hover */
     
-    background-color: #6f00ff;
-    background: #6f00ff;
+    background-color: @select_outline;
+    background: @select_outline;
 }
 
 
@@ -52,12 +63,11 @@ entry  {
     font-family: Arial;
     outline:0;
     font-size: 14px;
-    color: #00ff15;
-    background-color: #1e0046;
-    background: #1e0046;
+    color: @text;
+    background-color: @background;
+    background: @background;
     outline-width: 0px;
     border-radius: 0;
-    box-shadow: inset 0 0 0 1px #8000b3;
+    box-shadow: inset 0 0 0 1px @border;
     
 }
-
